[fix] 支持jdk8