@@ -18,6 +18,7 @@ package io.aiven.kafka.tieredstorage.manifest.index;
 
 import java.util.List;
 
+import com.google.common.collect.ImmutableList;
 import org.junit.jupiter.api.Test;
 
 import static org.assertj.core.api.Assertions.assertThat;
@@ -25,8 +26,8 @@ import static org.assertj.core.api.Assertions.assertThat;
 class VariableSizeChunkIndexEqualsTest {
     @Test
     void identical() {
-        final var i1 = new VariableSizeChunkIndex(100, 1000, List.of(10, 20, 30));
-        final var i2 = new VariableSizeChunkIndex(100, 1000, List.of(10, 20, 30));
+        final VariableSizeChunkIndex i1 = new VariableSizeChunkIndex(100, 1000, ImmutableList.of(10, 20, 30));
+        final VariableSizeChunkIndex i2 = new VariableSizeChunkIndex(100, 1000, ImmutableList.of(10, 20, 30));
         assertThat(i1).isEqualTo(i2);
         assertThat(i2).isEqualTo(i1);
         assertThat(i1).hasSameHashCodeAs(i2);
@@ -34,8 +35,8 @@ class VariableSizeChunkIndexEqualsTest {
 
     @Test
     void differentOriginalChunkSize() {
-        final var i1 = new VariableSizeChunkIndex(100, 1000, List.of(10, 20, 30));
-        final var i2 = new VariableSizeChunkIndex(101, 1000, List.of(10, 20, 30));
+        final VariableSizeChunkIndex i1 = new VariableSizeChunkIndex(100, 1000, ImmutableList.of(10, 20, 30));
+        final VariableSizeChunkIndex i2 = new VariableSizeChunkIndex(101, 1000, ImmutableList.of(10, 20, 30));
         assertThat(i1).isNotEqualTo(i2);
         assertThat(i2).isNotEqualTo(i1);
         assertThat(i1).doesNotHaveSameHashCodeAs(i2);
@@ -43,8 +44,8 @@ class VariableSizeChunkIndexEqualsTest {
 
     @Test
     void differentOriginalFileSize() {
-        final var i1 = new VariableSizeChunkIndex(100, 1000, List.of(10, 20, 30));
-        final var i2 = new VariableSizeChunkIndex(100, 1001, List.of(10, 20, 30));
+        final VariableSizeChunkIndex i1 = new VariableSizeChunkIndex(100, 1000, ImmutableList.of(10, 20, 30));
+        final VariableSizeChunkIndex i2 = new VariableSizeChunkIndex(100, 1001, ImmutableList.of(10, 20, 30));
         assertThat(i1).isNotEqualTo(i2);
         assertThat(i2).isNotEqualTo(i1);
         assertThat(i1).doesNotHaveSameHashCodeAs(i2);
@@ -52,8 +53,8 @@ class VariableSizeChunkIndexEqualsTest {
 
     @Test
     void differentTransformedChunks() {
-        final var i1 = new VariableSizeChunkIndex(100, 1000, List.of(10, 20, 30));
-        final var i2 = new VariableSizeChunkIndex(100, 1000, List.of(10, 20, 31));
+        final VariableSizeChunkIndex i1 = new VariableSizeChunkIndex(100, 1000, ImmutableList.of(10, 20, 30));
+        final VariableSizeChunkIndex i2 = new VariableSizeChunkIndex(100, 1000, ImmutableList.of(10, 20, 31));
         assertThat(i1).isNotEqualTo(i2);
         assertThat(i2).isNotEqualTo(i1);
         assertThat(i1).doesNotHaveSameHashCodeAs(i2);
